ScreenPool: add fake screens initially

So that fake screens at the gui starts are in m_fakeScreens.

BUG: 484687